# UnifiedNeuroimagingPipeline

./: PipelineEnvironment.csh  PipelineEnvironment.sh  README.md
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/: COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.in  create_src.sh  libecat7.spec  libtool  todo
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/doc/: ecat6_to_ecat7.txt
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/etc/: Makefile  Makefile.am  Makefile.in  libecat7-1.5-1.info  libecat7.info.in  libecat7.spec.in
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/new_src/: Makefile.am  Makefile.in  src_2003.07.04_AML1.patch  src_2006.03.29_AML1.patch
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/new_src/.deps/: convert_64.Plo  convert_70.Plo  matrix.Plo  rfa_xdr.Plo  rts_cmd.Plo
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/new_utils/: Makefile.am  Makefile.in  utils_2003.07.04_AML1.patch  utils_2006.03.29_AML1.patch
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/new_utils/.deps/: analyze2ifh.Po  applynorm.Po  ecat_model.Po  get_axial_lor.Po  imagemath.Po  make_volume.Po  matinfo.Po  write_ecat.Po
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/orig_src/: rts_cmd.c  rtsacs.c
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/src/: Makefile  Makefile.am  Makefile.in  analyze.c  analyze.lo  convert_64.c  convert_64.lo  convert_70.lo  crash.lo  interfile.lo  libecat.la  load_volume7.lo  machine_indep.c  machine_indep.lo  matrix.c  matrix.h  matrix_64.lo  matrix_extra.c  matrix_extra.lo  matrix_slice.c  matrix_slice.lo  matrix_xdr.lo  num_sort.lo  rfa_xdr.lo  rts_cmd.c  rts_cmd.lo  save_volume7.c  save_volume7.lo  sino_dets.lo
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/src/.deps/: analyze.Plo  crash.Plo  interfile.Plo  load_volume7.Plo  machine_indep.Plo  matrix_64.Plo  matrix_extra.Plo  matrix_slice.Plo  matrix_xdr.Plo  num_sort.Plo  save_volume7.Plo  sino_dets.Plo
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/src/.libs/: libecat.la  libecat.lai  libecat.so.1  libecat.so.1.0.4
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/utils/: Makefile  Makefile.am  Makefile.in  analyze2ifh  applynorm  applynorm.c  byte_volume  byte_volume.c  cti2analyze  get_axial_lor  get_axial_lor.c  imagemath  imagemath.c  load_volume.h  make_volume  matcopy  matcopy.c  matinfo  matlist  matlist.c  read_ecat  scan2if  scanshift.c  show_header  show_header.c  wb_assemble  wb_assemble.c  write_ecat
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/utils/.deps/: byte_volume.Po  cti2analyze.Po  matcopy.Po  matlist.Po  plandefs.Po  read_ecat.Po  scan2if.Po  show_header.Po  wb_assemble.Po
SCRIPTS/lin64-nilsrc/ecat/libecat7-1.5/utils/.libs/: analyze2ifh  applynorm  byte_volume  cti2analyze  get_axial_lor  imagemath  matcopy  (+8 more)
(+4238 files in other folders)
